1 file modified, 1 added

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,15 @@
 <my-app>loading</my-app>
+
+<!DOCTYPE html>
+<html>
+
+      <head lang="en">
+        <meta charset="UTF-8">
+        <script src="start.js"></script>
+      </head>
+
+      <body>
+          <div style="width: 500px; height: 200px; border: 1px solid green;"></div>
+      </body>
+   
+</html>
