--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,16 @@
 
       <head lang="en">
         <meta charset="UTF-8">
+
+        <script src="../dist/ag-grid.js"></script>
+        <link rel="stylesheet" type="text/css" href="../dist/ag-grid.css">
+        <link rel="stylesheet" type="text/css" href="../dist/theme-fresh.css">
+
         <script src="start.js"></script>
       </head>
 
       <body>
-          <div style="width: 500px; height: 200px; border: 1px solid green;"></div>
+          <div id="myGrid" style="width: 500px; height: 200px; border: 1px solid green;"></div>
       </body>
    
 </html>
