--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,4 @@
-<my-app>loading</my-app>
 
-<!DOCTYPE html>
-<html>
 
-      <head lang="en">
-        <meta charset="UTF-8">
 
-        <script src="../dist/ag-grid.js"></script>
-        <link rel="stylesheet" type="text/css" href="../dist/ag-grid.css">
-        <link rel="stylesheet" type="text/css" href="../dist/theme-fresh.css">
-
-        <script src="start.js"></script>
-      </head>
-
-      <body>
-          <div id="myGrid" style="width: 500px; height: 200px; border: 1px solid green;"></div>
-      </body>
-   
-</html>
+              <my-app></my-app>
